[package]
name = "oj-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.4.4", features = ["headers"] }
async-session = "^3.0.0"
tokio = { version = "^1.15.0", features = ["full"] }
dotenv = "^0.15.0"
chrono = "^0.4.19"
async-redis-session = "^0.2.2"
serde = "^1.0.134"
serde_json = "^1.0.75"
axum_csrf = "^0.1.3"
rust-argon2 = "^1.0.0"
rand = "^0.8.4"
tower-cookies = "^0.4.1"
mongodb = "^2.1.0"
bson = "^2.1.0"
time = "^0.2.27" 
config = "^0.11.0"
tracing = "^0.1.29"
captcha_rust =  "^0.1.3"
tracing-subscriber = "^0.3.6"